# mcleap

./: .gitignore  .gitmodules  CMakeLists.txt  Common_Triangulation.h  Device_Triangulation.h  Helpers_Triangulation.h  Host_Triangulation.h  README.md  kernels.cuh  playground.cu
experiments/: CMakeLists.txt  diffusion_limited_aggregation.cu  dla_results_collection.cu  example.cpp  floating_point_predicates_precision.cu  moving_device_mesh.cu  moving_periodic_device_mesh.cu  predicates.c  predicates.h
experiments/helper/: stats.cuh
include/: Common_Triangulation.h  Device_Triangulation.h  Helpers_Triangulation.h  Host_PeriodicTriangulation.h  Host_Triangulation.h  gridCount2d.h  kernels.cuh
main/: main.cu
scripts/: plot_data.py
tests/: CMakeLists.txt  grid2d_frnn.cu  test_closest_neighbors.cu  test_frnn.cu
